syntax = "proto3";

package client;
option java_package = "com.example.proto.client";
option java_outer_classname = "ClientProto";
option java_multiple_files = true;
option objc_class_prefix = "HLWS";

message Client {
  string AppId = 100;
  string Namespace =101;
}
message FlyingConfig{
  string AppId = 100;
  string NamespaceName =101;
  string ReleaseKey =102;
  string Format= 103;
  string Value =104;
}